[gd_scene load_steps=35 format=3 uid="uid://r532aoofsao4"]

[ext_resource type="Script" path="res://scripts/cultist_boss.gd" id="1_boss"]
[ext_resource type="Texture2D" uid="uid://d0hclug8qucjg" path="res://Assets/cultist_boss.png" id="2_2bdnd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t056u"]
atlas = ExtResource("2_2bdnd")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g367o"]
atlas = ExtResource("2_2bdnd")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a1ck"]
atlas = ExtResource("2_2bdnd")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6klo"]
atlas = ExtResource("2_2bdnd")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qded"]
atlas = ExtResource("2_2bdnd")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2j0md"]
atlas = ExtResource("2_2bdnd")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eus54"]
atlas = ExtResource("2_2bdnd")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0px4"]
atlas = ExtResource("2_2bdnd")
region = Rect2(224, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cistu"]
atlas = ExtResource("2_2bdnd")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pgow"]
atlas = ExtResource("2_2bdnd")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibpit"]
atlas = ExtResource("2_2bdnd")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd456"]
atlas = ExtResource("2_2bdnd")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ium"]
atlas = ExtResource("2_2bdnd")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_scuej"]
atlas = ExtResource("2_2bdnd")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn1cd"]
atlas = ExtResource("2_2bdnd")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ue44f"]
atlas = ExtResource("2_2bdnd")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4vqi"]
atlas = ExtResource("2_2bdnd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pta45"]
atlas = ExtResource("2_2bdnd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u41o"]
atlas = ExtResource("2_2bdnd")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce1wp"]
atlas = ExtResource("2_2bdnd")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4aoj"]
atlas = ExtResource("2_2bdnd")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bc4v"]
atlas = ExtResource("2_2bdnd")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbn0j"]
atlas = ExtResource("2_2bdnd")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lyjk"]
atlas = ExtResource("2_2bdnd")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb7ob"]
atlas = ExtResource("2_2bdnd")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8uap"]
atlas = ExtResource("2_2bdnd")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6f7a"]
atlas = ExtResource("2_2bdnd")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3818k"]
atlas = ExtResource("2_2bdnd")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_boss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t056u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g367o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a1ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6klo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qded")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2j0md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eus54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0px4")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cistu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pgow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibpit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd456")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ium")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scuej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn1cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ue44f")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4vqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pta45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u41o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce1wp")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4aoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bc4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbn0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lyjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb7ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8uap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6f7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3818k")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_boss"]
radius = 12.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_detect"]
radius = 200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_attack"]
radius = 40.0

[node name="CultistBoss" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_boss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_boss")
animation = &"run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_boss")

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detect")

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_attack")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
